app/assets/stylesheets/masthead.css.scss
#malmo-masthead {
  position: relative;
  max-width: 56em;
  min-width: 43em;
  height: 6em;
  margin: .2em auto 1em;

  .nav-logo {
    position: absolute;
    z-index: 20;
    top: .5em;
    left: 1em;
    a {
      display: block;
      background: white url("logo-x1.png") 15px center no-repeat;
      background-size: 48px 65px;
      width: 78px;
      height: 65px;
      border: none;
    }
  }

  nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  nav li {
    display: inline-block;
    margin: 0;
    padding: 0;
  }

  nav#masthead-main {
    position: absolute;
    width: 100%;
    z-index: 10;
    top: 2.3em;
    left: 0;
    height: emize(26);
    background: $mastheadBackground;
    color: $mastheadColor;
    ul {
      margin-left: 6.8em;
    }
    a {
      display: inline-block;
      @include box-sizing(border-box);
      overflow: hidden;
      white-space: nowrap;
      padding: emize(6) emize(15);
      font-family: $sansSerif;
      font-size: emize(13);
      color: white;
      height: emize(26, 13);
      line-height: emize(15, 13);
      outline: 0;
      border: transparent solid;
      border-right: white solid;
      border-width: 0 1px;
    }
    li:first-child a {
      border-left: white solid 1px;
    }
    a:hover, a.active {
      background: $mastheadBackgroundHighlight;
    }
  }

  nav#masthead-others {
    position: absolute;
    top: .5em;
    right: 18em;
    li {
      margin-right: 1.4em;
    }
    a {
      overflow: hidden;
      white-space: nowrap;
      color: black;
      display: inline-block;
      font-family: $sansSerif;
      font-size: emize(13);
    }
  }

  #masthead-search {
    position: absolute;
    top: .3em;
    right: 0;
    @media (min-width: 43em) {
      .q {
        @include box-sizing(border-box);
        font-size: 13px;
        height: 25px;
        width: 18em;
      }
      .btn {
        @include box-sizing(border-box);
        font-size: 13px;
        height: 25px;
        padding-top: 1px;
      }
    }
  }

  #nav-triggers {
    display: none;
  }
}

